[gd_scene load_steps=4 format=3 uid="uid://bw7mtgs1prfw7"]

[ext_resource type="Script" uid="uid://h7scl8n0lhpe" path="res://Scenes/Blocks/Attacks/Gatling/gatling.gd" id="1_unfmi"]
[ext_resource type="Texture2D" uid="uid://cm8fhjq18n7fc" path="res://Assets/Bugs/bug.png" id="2_i7evq"]

[sub_resource type="CircleShape2D" id="CircleShape2D_4wmdh"]
radius = 100.0

[node name="basic" type="Node2D"]
scale = Vector2(0.4, 0.4)
script = ExtResource("1_unfmi")

[node name="Icon" type="Sprite2D" parent="."]
visible = false
position = Vector2(1, 0)
texture = ExtResource("2_i7evq")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.95
autostart = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_4wmdh")

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
